# tracking_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: DetectedObject.msg  DetectedObjects.msg  Detection3D.msg  Detections3D.msg  PosDetection.msg  PosDetections.msg  Track.msg  Track3D.msg  TrackedObject.msg  TrackedObjects.msg  Tracks.msg  Tracks3D.msg  Trajectory.msg
